@@ -54,7 +54,6 @@ import hudson.model.PaneStatusProperties;
 import hudson.model.ParameterDefinition;
 import hudson.model.ParameterDefinition.ParameterDescriptor;
 import hudson.model.PasswordParameterDefinition;
-import hudson.model.Queue;
 import hudson.model.Run;
 import hudson.model.Slave;
 import hudson.model.TimeZoneProperty;
@@ -63,6 +62,7 @@ import hudson.model.User;
 import hudson.model.View;
 import hudson.scm.SCM;
 import hudson.scm.SCMDescriptor;
+import hudson.search.SearchFactory;
 import hudson.search.SearchableModelObject;
 import hudson.security.ACL;
 import hudson.security.AccessControlled;
@@ -95,6 +95,14 @@ import hudson.util.jna.GNUCLibrary;
 import hudson.views.MyViewsTabBar;
 import hudson.views.ViewsTabBar;
 import hudson.widgets.RenderOnDemandClosure;
+import io.jenkins.servlet.ServletExceptionWrapper;
+import io.jenkins.servlet.http.CookieWrapper;
+import io.jenkins.servlet.http.HttpServletRequestWrapper;
+import io.jenkins.servlet.http.HttpServletResponseWrapper;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
@@ -117,6 +125,10 @@ import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.text.DateFormat;
 import java.text.DecimalFormat;
+import java.text.MessageFormat;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
@@ -131,6 +143,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.SortedMap;
 import java.util.TimeZone;
@@ -145,11 +158,9 @@ import java.util.logging.Logger;
 import java.util.logging.SimpleFormatter;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import javax.servlet.ServletException;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import jenkins.console.ConsoleUrlProvider;
+import jenkins.console.DefaultConsoleUrlProvider;
+import jenkins.console.WithConsoleUrl;
 import jenkins.model.GlobalConfiguration;
 import jenkins.model.GlobalConfigurationCategory;
 import jenkins.model.Jenkins;
@@ -163,7 +174,6 @@ import org.apache.commons.jelly.Script;
 import org.apache.commons.jelly.XMLOutput;
 import org.apache.commons.jexl.parser.ASTSizeFunction;
 import org.apache.commons.jexl.util.Introspector;
-import org.apache.commons.lang.StringUtils;
 import org.jenkins.ui.icon.Icon;
 import org.jenkins.ui.icon.IconSet;
 import org.jvnet.tiger_types.Types;
@@ -174,7 +184,9 @@ import org.kohsuke.stapler.Ancestor;
 import org.kohsuke.stapler.RawHtmlArgument;
 import org.kohsuke.stapler.Stapler;
 import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 import org.kohsuke.stapler.StaplerResponse;
+import org.kohsuke.stapler.StaplerResponse2;
 import org.springframework.security.access.AccessDeniedException;
 
 /**
@@ -219,12 +231,12 @@ public class Functions {
     }
 
     public static String xsDate(Calendar cal) {
-        return Util.XS_DATETIME_FORMATTER.format(cal.getTime());
+        return Util.XS_DATETIME_FORMATTER2.format(cal.toInstant());
     }
 
     @Restricted(NoExternalUse.class)
     public static String iso8601DateTime(Date date) {
-        return Util.XS_DATETIME_FORMATTER.format(date);
+        return Util.XS_DATETIME_FORMATTER2.format(date.toInstant());
     }
 
     /**
@@ -236,7 +248,7 @@ public class Functions {
     }
 
     public static String rfc822Date(Calendar cal) {
-        return Util.RFC822_DATETIME_FORMATTER.format(cal.getTime());
+        return DateTimeFormatter.RFC_1123_DATE_TIME.format(ZonedDateTime.ofInstant(cal.toInstant(), ZoneId.systemDefault()));
     }
 
     /**
@@ -274,8 +286,8 @@ public class Functions {
     }
 
     public static void initPageVariables(JellyContext context) {
-        StaplerRequest currentRequest = Stapler.getCurrentRequest();
-        currentRequest.getWebApp().getDispatchValidator().allowDispatch(currentRequest, Stapler.getCurrentResponse());
+        StaplerRequest2 currentRequest = Stapler.getCurrentRequest2();
+        currentRequest.getWebApp().getDispatchValidator().allowDispatch(currentRequest, Stapler.getCurrentResponse2());
         String rootURL = currentRequest.getContextPath();
 
         Functions h = new Functions();
@@ -314,8 +326,7 @@ public class Functions {
      */
     public static <B> Class getTypeParameter(Class<? extends B> c, Class<B> base, int n) {
         Type parameterization = Types.getBaseClass(c, base);
-        if (parameterization instanceof ParameterizedType) {
-            ParameterizedType pt = (ParameterizedType) parameterization;
+        if (parameterization instanceof ParameterizedType pt) {
             return Types.erasure(Types.getTypeArgument(pt, n));
         } else {
             throw new AssertionError(c + " doesn't properly parameterize " + base);
@@ -371,7 +382,10 @@ public class Functions {
         return buf.toString();
     }
 
-    public static RunUrl decompose(StaplerRequest req) {
+    /**
+     * @since 2.475
+     */
+    public static RunUrl decompose(StaplerRequest2 req) {
         List<Ancestor> ancestors = req.getAncestors();
 
         // find the first and last Run instances
@@ -405,11 +419,19 @@ public class Functions {
     }
 
     /**
+     * @deprecated use {@link #decompose(StaplerRequest2)}
+     */
+    @Deprecated
+    public static RunUrl decompose(StaplerRequest req) {
+        return decompose(StaplerRequest.toStaplerRequest2(req));
+    }
+
+    /**
      * If we know the user's screen resolution, return it. Otherwise null.
      * @since 1.213
      */
     public static Area getScreenResolution() {
-        Cookie res = Functions.getCookie(Stapler.getCurrentRequest(), "screenResolution");
+        Cookie res = Functions.getCookie(Stapler.getCurrentRequest2(), "screenResolution");
         if (res != null)
             return Area.parse(res.getValue());
         return null;
@@ -591,6 +613,9 @@ public class Functions {
         return list;
     }
 
+    /**
+     * @since 2.475
+     */
     public static Cookie getCookie(HttpServletRequest req, String name) {
         Cookie[] cookies = req.getCookies();
         if (cookies != null) {
@@ -603,10 +628,29 @@ public class Functions {
         return null;
     }
 
+    /**
+     * @deprecated use {@link #getCookie(HttpServletRequest, String)}
+     */
+    @Deprecated
+    public static javax.servlet.http.Cookie getCookie(javax.servlet.http.HttpServletRequest req, String name) {
+        return CookieWrapper.fromJakartaServletHttpCookie(getCookie(HttpServletRequestWrapper.toJakartaHttpServletRequest(req), name));
+    }
+
+    /**
+     * @since 2.475
+     */
     public static String getCookie(HttpServletRequest req, String name, String defaultValue) {
         Cookie c = getCookie(req, name);
         if (c == null || c.getValue() == null) return defaultValue;
         return c.getValue();
+    }
+
+    /**
+     * @deprecated use {@link #getCookie(HttpServletRequest, String, String)}
+     */
+    @Deprecated
+    public static String getCookie(javax.servlet.http.HttpServletRequest req, String name, String defaultValue) {
+        return getCookie(HttpServletRequestWrapper.toJakartaHttpServletRequest(req), name, defaultValue);
     }
 
     private static final Pattern ICON_SIZE = Pattern.compile("\\d+x\\d+");
@@ -620,17 +664,14 @@ public class Functions {
     }
 
     /**
-     * Gets the suffix to use for YUI JavaScript.
-     */
-    public static String getYuiSuffix() {
-        return DEBUG_YUI ? "debug" : "min";
-    }
-
-    /**
-     * Set to true if you need to use the debug version of YUI.
+     * No longer used, to be removed after enough plugins have adopted a version of the test harness with
+     * <a href="https://github.com/jenkinsci/jenkins-test-harness/pull/874">jenkins-test-harness/pull/874</a> in it.
+     *
+     * @deprecated removed without replacement
      */
     @SuppressFBWarnings(value = "MS_SHOULD_BE_FINAL", justification = "for script console")
-    public static boolean DEBUG_YUI = SystemProperties.getBoolean("debug.YUI");
+    @Deprecated(forRemoval = true, since = "TODO")
+    public static boolean DEBUG_YUI;
 
     /**
      * Creates a sub map by using the given range (both ends inclusive).
@@ -692,13 +733,13 @@ public class Functions {
     }
 
     @Restricted(NoExternalUse.class)
-    public static String getUserTimeZonePostfix() {
+    public static String getUserTimeZonePostfix(Date date) {
         if (!isUserTimeZoneOverride()) {
             return "";
         }
 
         TimeZone tz = TimeZone.getTimeZone(getUserTimeZone());
-        return tz.getDisplayName(tz.observesDaylightTime(), TimeZone.SHORT);
+        return tz.getDisplayName(tz.inDaylightTime(date), TimeZone.SHORT, getCurrentLocale());
     }
 
     @Restricted(NoExternalUse.class)
@@ -712,8 +753,10 @@ public class Functions {
      * Finds the given object in the ancestor list and returns its URL.
      * This is used to determine the "current" URL assigned to the given object,
      * so that one can compute relative URLs from it.
+     *
+     * @since 2.475
      */
-    public static String getNearestAncestorUrl(StaplerRequest req, Object it) {
+    public static String getNearestAncestorUrl(StaplerRequest2 req, Object it) {
         List list = req.getAncestors();
         for (int i = list.size() - 1; i >= 0; i--) {
             Ancestor anc = (Ancestor) list.get(i);
@@ -724,10 +767,18 @@ public class Functions {
     }
 
     /**
+     * @deprecated use {@link #getNearestAncestorUrl(StaplerRequest2, Object)}
+     */
+    @Deprecated
+    public static String getNearestAncestorUrl(StaplerRequest req, Object it) {
+        return getNearestAncestorUrl(StaplerRequest.toStaplerRequest2(req), it);
+    }
+
+    /**
      * Finds the inner-most {@link SearchableModelObject} in scope.
      */
     public static String getSearchURL() {
-        List list = Stapler.getCurrentRequest().getAncestors();
+        List list = Stapler.getCurrentRequest2().getAncestors();
         for (int i = list.size() - 1; i >= 0; i--) {
             Ancestor anc = (Ancestor) list.get(i);
             if (anc.getObject() instanceof SearchableModelObject)
@@ -887,7 +938,7 @@ public class Functions {
         if (object instanceof AccessControlled)
             checkPermission((AccessControlled) object, permission);
         else {
-            List<Ancestor> ancs = Stapler.getCurrentRequest().getAncestors();
+            List<Ancestor> ancs = Stapler.getCurrentRequest2().getAncestors();
             for (Ancestor anc : Iterators.reverse(ancs)) {
                 Object o = anc.getObject();
                 if (o instanceof AccessControlled) {
@@ -919,7 +970,7 @@ public class Functions {
         if (object instanceof AccessControlled)
             return ((AccessControlled) object).hasPermission(permission);
         else {
-            List<Ancestor> ancs = Stapler.getCurrentRequest().getAncestors();
+            List<Ancestor> ancs = Stapler.getCurrentRequest2().getAncestors();
             for (Ancestor anc : Iterators.reverse(ancs)) {
                 Object o = anc.getObject();
                 if (o instanceof AccessControlled) {
@@ -930,10 +981,13 @@ public class Functions {
         }
     }
 
-    public static void adminCheck(StaplerRequest req, StaplerResponse rsp, Object required, Permission permission) throws IOException, ServletException {
+    /**
+     * @since 2.475
+     */
+    public static void adminCheck(StaplerRequest2 req, StaplerResponse2 rsp, Object required, Permission permission) throws IOException, ServletException {
         // this is legacy --- all views should be eventually converted to
         // the permission based model.
-        if (required != null && !Hudson.adminCheck(req, rsp)) {
+        if (required != null && !Hudson.adminCheck(StaplerRequest.fromStaplerRequest2(req), StaplerResponse.fromStaplerResponse2(rsp))) {
             // check failed. commit the FORBIDDEN response, then abort.
             rsp.setStatus(HttpServletResponse.SC_FORBIDDEN);
             rsp.getOutputStream().close();
@@ -945,10 +999,24 @@ public class Functions {
             checkPermission(permission);
     }
 
+   /**
+     * @deprecated use {@link #adminCheck(StaplerRequest2, StaplerResponse2, Object, Permission)}
+     */
+    @Deprecated
+    public static void adminCheck(StaplerRequest req, StaplerResponse rsp, Object required, Permission permission) throws IOException, javax.servlet.ServletException {
+        try {
+            adminCheck(StaplerRequest.toStaplerRequest2(req), StaplerResponse.toStaplerResponse2(rsp), required, permission);
+        } catch (ServletException e) {
+            throw ServletExceptionWrapper.fromJakartaServletException(e);
+        }
+    }
+
     /**
      * Infers the hudson installation URL from the given request.
+     *
+     * @since 2.475
      */
-    public static String inferHudsonURL(StaplerRequest req) {
+    public static String inferHudsonURL(StaplerRequest2 req) {
         String rootUrl = Jenkins.get().getRootUrl();
         if (rootUrl != null)
             // prefer the one explicitly configured, to work with load-balancer, frontend, etc.
@@ -963,12 +1031,20 @@ public class Functions {
     }
 
     /**
+     * @deprecated use {@link #inferHudsonURL(StaplerRequest2)}
+     */
+    @Deprecated
+    public static String inferHudsonURL(StaplerRequest req) {
+        return inferHudsonURL(StaplerRequest.toStaplerRequest2(req));
+    }
+
+    /**
      * Returns the link to be displayed in the footer of the UI.
      */
     public static String getFooterURL() {
         if (footerURL == null) {
             footerURL = SystemProperties.getString("hudson.footerURL");
-            if (StringUtils.isBlank(footerURL)) {
+            if (footerURL == null || footerURL.isBlank()) {
                 footerURL = "https://www.jenkins.io/";
             }
         }
@@ -1225,7 +1301,7 @@ public class Functions {
         if (object instanceof AccessControlled)
             return hasAnyPermission((AccessControlled) object, permissions);
         else {
-            AccessControlled ac = Stapler.getCurrentRequest().findAncestorObject(AccessControlled.class);
+            AccessControlled ac = Stapler.getCurrentRequest2().findAncestorObject(AccessControlled.class);
             if (ac != null) {
                 return hasAnyPermission(ac, permissions);
             }
@@ -1263,7 +1339,7 @@ public class Functions {
         if (object instanceof AccessControlled)
             checkAnyPermission((AccessControlled) object, permissions);
         else {
-            List<Ancestor> ancs = Stapler.getCurrentRequest().getAncestors();
+            List<Ancestor> ancs = Stapler.getCurrentRequest2().getAncestors();
             for (Ancestor anc : Iterators.reverse(ancs)) {
                 Object o = anc.getObject();
                 if (o instanceof AccessControlled) {
@@ -1334,7 +1410,7 @@ public class Functions {
         Map<Object, String> ancestors = new HashMap<>();
         View view = null;
 
-        StaplerRequest request = Stapler.getCurrentRequest();
+        StaplerRequest2 request = Stapler.getCurrentRequest2();
         for (Ancestor a : request.getAncestors()) {
             ancestors.put(a.getObject(), a.getRelativePath());
             if (a.getObject() instanceof View)
@@ -1420,7 +1496,7 @@ public class Functions {
         StringBuilder buf = new StringBuilder();
         Item i = p;
         while (true) {
-            if (buf.length() > 0) buf.insert(0, separationString);
+            if (!buf.isEmpty()) buf.insert(0, separationString);
             buf.insert(0, useDisplayName ? i.getDisplayName() : i.getName());
             ItemGroup gr = i.getParent();
 
@@ -1680,7 +1756,7 @@ public class Functions {
         if (it instanceof Descriptor)
             clazz = ((Descriptor) it).clazz;
 
-        String buf = Stapler.getCurrentRequest().getContextPath() + Jenkins.VIEW_RESOURCE_PATH + '/' +
+        String buf = Stapler.getCurrentRequest2().getContextPath() + Jenkins.VIEW_RESOURCE_PATH + '/' +
                 clazz.getName().replace('.', '/').replace('$', '/') +
                 '/' + path;
         return buf;
@@ -1688,7 +1764,7 @@ public class Functions {
 
     public static boolean hasView(Object it, String path) throws IOException {
         if (it == null)    return false;
-        return Stapler.getCurrentRequest().getView(it, path) != null;
+        return Stapler.getCurrentRequest2().getView(it, path) != null;
     }
 
     /**
@@ -1871,7 +1947,7 @@ public class Functions {
         for (String s : components) {
             if (s.isEmpty())  continue;
 
-            if (buf.length() > 0) {
+            if (!buf.isEmpty()) {
                 if (buf.charAt(buf.length() - 1) != '/')
                     buf.append('/');
                 if (s.charAt(0) == '/')   s = s.substring(1);
@@ -1899,27 +1975,29 @@ public class Functions {
             return null;
         }
         if (urlName.startsWith("/"))
-            return joinPath(Stapler.getCurrentRequest().getContextPath(), urlName);
+            return joinPath(Stapler.getCurrentRequest2().getContextPath(), urlName);
         else
             // relative URL name
-            return joinPath(Stapler.getCurrentRequest().getContextPath() + '/' + itUrl, urlName);
+            return joinPath(Stapler.getCurrentRequest2().getContextPath() + '/' + itUrl, urlName);
     }
 
     /**
-     * Computes the link to the console for the run for the specified executable, taking {@link ConsoleUrlProvider} into account.
-     * @param executable the executable (normally a {@link Run})
-     * @return the absolute URL for accessing the build console for the executable, or null if there is no build associated with the executable
-     * @since TODO
+     * Computes the link to the console for the run for the specified object, taking {@link ConsoleUrlProvider} into account.
+     * @param withConsoleUrl the object to compute a console url for (can be {@link Run}, a {@code PlaceholderExecutable}...)
+     * @return the absolute URL for accessing the build console for the given object, or null if there is no console URL defined for the object.
+     * @since 2.433
      */
-    public static @CheckForNull String getConsoleUrl(Queue.Executable executable) {
-        if (executable == null) {
-            return null;
-        } else if (executable instanceof Run) {
-            return ConsoleUrlProvider.getRedirectUrl((Run<?, ?>) executable);
-        } else {
-            // Handles cases such as PlaceholderExecutable for Pipeline node steps.
-            return getConsoleUrl(executable.getParentExecutable());
-        }
+    public static @CheckForNull String getConsoleUrl(WithConsoleUrl withConsoleUrl) {
+        String consoleUrl = withConsoleUrl.getConsoleUrl();
+        return consoleUrl != null ? Stapler.getCurrentRequest().getContextPath() + '/' + consoleUrl : null;
+    }
+
+    /**
+     * @param run the run
+     * @return the Console Provider for the given run, if null, the default Console Provider
+     */
+    public static ConsoleUrlProvider getConsoleProviderFor(Run<?, ?> run) {
+        return Optional.ofNullable(ConsoleUrlProvider.getProvider(run)).orElse(new DefaultConsoleUrlProvider());
     }
 
     /**
@@ -1965,7 +2043,7 @@ public class Functions {
         } catch (MalformedURLException e) {
             // fall back to HTTP request
         }
-        return Stapler.getCurrentRequest().getServerName();
+        return Stapler.getCurrentRequest2().getServerName();
     }
 
     /**
@@ -1977,8 +2055,7 @@ public class Functions {
     @Deprecated
     public String getCheckUrl(String userDefined, Object descriptor, String field) {
         if (userDefined != null || field == null)   return userDefined;
-        if (descriptor instanceof Descriptor) {
-            Descriptor d = (Descriptor) descriptor;
+        if (descriptor instanceof Descriptor d) {
             return d.getCheckUrl(field);
         }
         return null;
@@ -1991,8 +2068,7 @@ public class Functions {
     public void calcCheckUrl(Map attributes, String userDefined, Object descriptor, String field) {
         if (userDefined != null || field == null)   return;
 
-        if (descriptor instanceof Descriptor) {
-            Descriptor d = (Descriptor) descriptor;
+        if (descriptor instanceof Descriptor d) {
             CheckMethod m = d.getCheckMethod(field);
             attributes.put("checkUrl", m.toStemUrl());
             attributes.put("checkDependsOn", m.getDependsOn());
@@ -2005,7 +2081,7 @@ public class Functions {
      * Used in {@code task.jelly} to decide if the page should be highlighted.
      */
     public boolean hyperlinkMatchesCurrentPage(String href) {
-        String url = Stapler.getCurrentRequest().getRequestURL().toString();
+        String url = Stapler.getCurrentRequest2().getRequestURL().toString();
         if (href == null || href.length() <= 1) return ".".equals(href) && url.endsWith("/");
         url = URLDecoder.decode(url, StandardCharsets.UTF_8);
         href = URLDecoder.decode(href, StandardCharsets.UTF_8);
@@ -2055,7 +2131,7 @@ public class Functions {
      * Prepend a prefix only when there's the specified body.
      */
     public String prepend(String prefix, String body) {
-        if (body != null && body.length() > 0)
+        if (body != null && !body.isEmpty())
             return prefix + body;
         return body;
     }
@@ -2064,10 +2140,21 @@ public class Functions {
         return CrumbIssuer.all();
     }
 
-    public static String getCrumb(StaplerRequest req) {
+    /**
+     * @since 2.475
+     */
+    public static String getCrumb(StaplerRequest2 req) {
         Jenkins h = Jenkins.getInstanceOrNull();
         CrumbIssuer issuer = h != null ? h.getCrumbIssuer() : null;
         return issuer != null ? issuer.getCrumb(req) : "";
+    }
+
+    /**
+     * @deprecated use {@link #getCrumb(StaplerRequest2)}
+     */
+    @Deprecated
+    public static String getCrumb(StaplerRequest req) {
+        return getCrumb(req != null ? StaplerRequest.toStaplerRequest2(req) : null);
     }
 
     public static String getCrumbRequestField() {
@@ -2082,7 +2169,7 @@ public class Functions {
 
     public static Locale getCurrentLocale() {
         Locale locale = null;
-        StaplerRequest req = Stapler.getCurrentRequest();
+        StaplerRequest2 req = Stapler.getCurrentRequest2();
         if (req != null)
             locale = req.getLocale();
         if (locale == null)
@@ -2095,7 +2182,7 @@ public class Functions {
      * from {@link ConsoleAnnotatorFactory}s and {@link ConsoleAnnotationDescriptor}s.
      */
     public static String generateConsoleAnnotationScriptAndStylesheet() {
-        String cp = Stapler.getCurrentRequest().getContextPath() + Jenkins.RESOURCE_PATH;
+        String cp = Stapler.getCurrentRequest2().getContextPath() + Jenkins.RESOURCE_PATH;
         StringBuilder buf = new StringBuilder();
         for (ConsoleAnnotatorFactory f : ConsoleAnnotatorFactory.all()) {
             String path = cp + "/extensionList/" + ConsoleAnnotatorFactory.class.getName() + "/" + f.getClass().getName();
@@ -2148,7 +2235,7 @@ public class Functions {
         }
 
         /* Mask from Extended Read */
-        StaplerRequest req = Stapler.getCurrentRequest();
+        StaplerRequest2 req = Stapler.getCurrentRequest2();
         if (o instanceof Secret || Secret.BLANK_NONSECRET_PASSWORD_FIELDS_WITHOUT_ITEM_CONFIGURE) {
             if (req != null) {
                 Item item = req.findAncestorObject(Item.class);
@@ -2194,7 +2281,7 @@ public class Functions {
             int firstPeriod = part.indexOf(".");
             return slash > 0 && firstPeriod > 0 && slash < firstPeriod;
         }).collect(Collectors.joining(" "));
-        if (StringUtils.isBlank(views)) {
+        if (views == null || views.isBlank()) {
             // fallback to full thread name if there are no apparent views
             return threadName;
         }
@@ -2242,8 +2329,19 @@ public class Functions {
         return SystemProperties.getBoolean("hudson.security.WipeOutPermission");
     }
 
+    @Deprecated
     public static String createRenderOnDemandProxy(JellyContext context, String attributesToCapture) {
-        return Stapler.getCurrentRequest().createJavaScriptProxy(new RenderOnDemandClosure(context, attributesToCapture));
+        return Stapler.getCurrentRequest2().createJavaScriptProxy(new RenderOnDemandClosure(context, attributesToCapture));
+    }
+
+    /**
+     * Called from renderOnDemand.jelly to generate the parameters for the proxy object generation.
+     *
+     * @since 2.475
+     */
+    @Restricted(NoExternalUse.class)
+    public static StaplerRequest2.RenderOnDemandParameters createRenderOnDemandProxyParameters(JellyContext context, String attributesToCapture) {
+        return Stapler.getCurrentRequest2().createJavaScriptProxyParameters(new RenderOnDemandClosure(context, attributesToCapture));
     }
 
     public static String getCurrentDescriptorByNameUrl() {
@@ -2252,18 +2350,18 @@ public class Functions {
 
     public static String setCurrentDescriptorByNameUrl(String value) {
         String o = getCurrentDescriptorByNameUrl();
-        Stapler.getCurrentRequest().setAttribute("currentDescriptorByNameUrl", value);
+        Stapler.getCurrentRequest2().setAttribute("currentDescriptorByNameUrl", value);
 
         return o;
     }
 
     public static void restoreCurrentDescriptorByNameUrl(String old) {
-        Stapler.getCurrentRequest().setAttribute("currentDescriptorByNameUrl", old);
+        Stapler.getCurrentRequest2().setAttribute("currentDescriptorByNameUrl", old);
     }
 
     public static List<String> getRequestHeaders(String name) {
         List<String> r = new ArrayList<>();
-        Enumeration e = Stapler.getCurrentRequest().getHeaders(name);
+        Enumeration e = Stapler.getCurrentRequest2().getHeaders(name);
         while (e.hasMoreElements()) {
             r.add(e.nextElement().toString());
         }
@@ -2358,6 +2456,7 @@ public class Functions {
      * Advertises the minimum set of HTTP headers that assist programmatic
      * discovery of Jenkins.
      */
+    @SuppressFBWarnings(value = "UC_USELESS_VOID_METHOD", justification = "TODO needs triage")
     public static void advertiseHeaders(HttpServletResponse rsp) {
         Jenkins j = Jenkins.getInstanceOrNull();
         if (j != null) {
@@ -2365,6 +2464,14 @@ public class Functions {
             rsp.setHeader("X-Jenkins", Jenkins.VERSION);
             rsp.setHeader("X-Jenkins-Session", Jenkins.SESSION_HASH);
         }
+    }
+
+    /**
+     * @deprecated use {@link #advertiseHeaders(HttpServletResponse)}
+     */
+    @Deprecated
+    public static void advertiseHeaders(javax.servlet.http.HttpServletResponse rsp) {
+        advertiseHeaders(HttpServletResponseWrapper.toJakartaHttpServletResponse(rsp));
     }
 
     @Restricted(NoExternalUse.class) // for actions.jelly and ContextMenu.add
@@ -2406,7 +2513,7 @@ public class Functions {
     }
 
     private static @NonNull String filterIconNameClasses(@NonNull String classNames) {
-        return Arrays.stream(StringUtils.split(classNames, ' '))
+        return Arrays.stream(classNames.split(" "))
             .filter(className -> className.startsWith("icon-"))
             .collect(Collectors.joining(" "));
     }
@@ -2441,7 +2548,7 @@ public class Functions {
             return iconGuess;
         }
 
-        StaplerRequest currentRequest = Stapler.getCurrentRequest();
+        StaplerRequest2 currentRequest = Stapler.getCurrentRequest2();
         String rootURL = currentRequest.getContextPath();
         Icon iconMetadata = tryGetIcon(iconGuess);
 
@@ -2477,5 +2584,35 @@ public class Functions {
     @Restricted(NoExternalUse.class)
     public static String generateItemId() {
         return String.valueOf(Math.floor(Math.random() * 3000));
+    }
+
+    @Restricted(NoExternalUse.class)
+    public static ExtensionList<SearchFactory> getSearchFactories() {
+        return SearchFactory.all();
+    }
+
+    /**
+     * @param keyboardShortcut the shortcut to be translated
+     * @return the translated shortcut, e.g. CMD+K to ⌘+K for macOS, CTRL+K for Windows
+     */
+    @Restricted(NoExternalUse.class)
+    public static String translateModifierKeysForUsersPlatform(String keyboardShortcut) {
+        StaplerRequest2 currentRequest = Stapler.getCurrentRequest2();
+        currentRequest.getWebApp().getDispatchValidator().allowDispatch(currentRequest, Stapler.getCurrentResponse2());
+        String userAgent = currentRequest.getHeader("User-Agent");
+
+        List<String> platformsThatUseCommand = List.of("MAC", "IPHONE", "IPAD");
+        boolean useCmdKey = platformsThatUseCommand.stream().anyMatch(e -> userAgent.toUpperCase().contains(e));
+
+        return keyboardShortcut.replace("CMD", useCmdKey ? "⌘" : "CTRL");
+    }
+
+    @Restricted(NoExternalUse.class)
+    public static String formatMessage(String format, Object args) {
+        if (format == null) {
+            return args.toString();
+        }
+
+        return MessageFormat.format(format, args);
     }
 }
